symmetrical-broccoli-routetable-ap-southeast-2
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-fe25139a", 
        "VpcId": "vpc-485e3f2c", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
